--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twilight-flower-fc72",
+  "name": "patient-wood-5994-d1",
   "description": "Cloudflare's native serverless SQL database.",
   "cloudflare": {
     "label": "Worker + D1 Database",
